--- a/site.yml
+++ b/site.yml
@@ -17,5 +17,6 @@
     - ircbouncer
     - xmpp
     - matrix
+    - mastodon
     - vpn
     - monitoring  # Monitoring role should be last. See roles/monitoring/README.md
