--- a/site.yml
+++ b/site.yml
@@ -18,5 +18,6 @@
     - xmpp
     - matrix
     - mastodon
+    - iot
     - vpn
     - monitoring  # Monitoring role should be last. See roles/monitoring/README.md
