Added InfluxDB, Mosquitto, mqtt-admin to iot role.

--- a/roles/iot/tasks/main.yml
+++ b/roles/iot/tasks/main.yml
@@ -1,1 +1,4 @@
 - include: grafana.yml tags=iot
+- include: influx.yml tags=iot
+- include: mosquitto.yml tags=iot
+- include: mqtt_admin.yml tags=iot
