--- a/roles/iot/handlers/main.yml
+++ b/roles/iot/handlers/main.yml
@@ -1,5 +1,14 @@
 - name: restart grafana
   service: name=grafana-server state=restarted
 
+- name: restart influxdb
+  service: name=influxdb state=restarted
+
+- name: restart telegraf
+  service: name=telegraf state=restarted
+
+- name: restart mosquitto
+  service: name=mosquitto state=restarted
+
 - name: restart apache
   service: name=apache2 state=restarted
