use mail as dkim selector. explicitely give keysize. add localhost to sasl exceptions.

--- a/roles/mailserver/files/etc_rspamd_override.d_dkim_signing.conf
+++ b/roles/mailserver/files/etc_rspamd_override.d_dkim_signing.conf
@@ -2,4 +2,7 @@
 path = "/var/lib/rspamd/dkim/$domain.$selector.key";
   
 # Default selector to use
-selector = "default";
+selector = "mail";
+
+# Enable DKIM signing for alias sender addresses
+allow_username_mismatch = true;
