Ensure we're always redirecting to the main homepage with www prepended.

--- a/roles/monitoring/templates/etc_apache2_sites-available_00-status.conf
+++ b/roles/monitoring/templates/etc_apache2_sites-available_00-status.conf
@@ -5,6 +5,8 @@
     SetHandler server-status
     Require ip 127.0.0.1
   </Location>
+
+  Redirect temp / https://www.{{ domain }}/
 </VirtualHost>
 
 <VirtualHost *:443>
@@ -13,4 +15,6 @@
     SetHandler server-status
     Require ip 127.0.0.1
   </Location>
+
+  Redirect temp / https://www.{{ domain }}/
 </VirtualHost>
