--- a/roles/matrix/tasks/synapse.yml
+++ b/roles/matrix/tasks/synapse.yml
@@ -1,10 +1,10 @@
 - name: Ensure repository key for Synapse is in place
-  apt_key: url=https://matrix.org/packages/debian/repo-key.asc state=present
+  apt_key: url=https://packages.matrix.org/debian/matrix-org-archive-keyring.gpg state=present
   tags:
     - dependencies
 
 - name: Add Synapse repository
-  apt_repository: repo="deb https://matrix.org/packages/debian/ {{ ansible_distribution_release }} main"
+  apt_repository: repo="deb https://packages.matrix.org/debian/ {{ ansible_distribution_release }} main"
   tags:
     - dependencies
 
