--- a/roles/mailserver/files/etc_dovecot_conf.d_90-sieve.conf
+++ b/roles/mailserver/files/etc_dovecot_conf.d_90-sieve.conf
@@ -2,4 +2,22 @@ plugin {
   sieve = ~/.dovecot.sieve
   sieve_dir = ~/sieve
   sieve_before = /etc/dovecot/sieve/before.d
+  sieve_plugins = sieve_imapsieve sieve_extprograms
+
+  ###
+  ### Spam learning
+  ###
+  # From elsewhere to Spam folder
+  imapsieve_mailbox1_name = Junk
+  imapsieve_mailbox1_causes = COPY
+  imapsieve_mailbox1_before = file:/etc/dovecot/sieve/learn_spam.sieve
+
+  # From Spam folder to elsewhere
+  imapsieve_mailbox2_name = *
+  imapsieve_mailbox2_from = Junk
+  imapsieve_mailbox2_causes = COPY
+  imapsieve_mailbox2_before = file:/etc/dovecot/sieve/learn_ham.sieve
+
+  sieve_pipe_bin_dir = /usr/bin
+  sieve_global_extensions = +vnd.dovecot.pipe
 }
