Install fail2ban with IPv6 support from stretch-backports (Debian 9).

--- a/roles/common/tasks/security.yml
+++ b/roles/common/tasks/security.yml
@@ -4,10 +4,17 @@
     state: present
   vars:
     packages:
-    - fail2ban
     - whois
     - lynis
     - rkhunter
+  tags:
+    - dependencies
+
+- name: Install newer fail2ban with IPv6 support
+  apt:
+    name: "fail2ban"
+    state: present
+    default_release: stretch-backports
   tags:
     - dependencies
 
