Lots of updates, first test of VPN.

--- a/roles/mailserver/files/etc_dovecot_conf.d_90-plugin.conf
+++ b/roles/mailserver/files/etc_dovecot_conf.d_90-plugin.conf
@@ -9,5 +9,5 @@
 plugin {
   # FTS (full text search with Solr)
   fts = solr
-  fts_solr = break-imap-search url=http://localhost:8080/solr/
+  fts_solr = url=http://localhost:8080/solr/
 }
