more fixes to support debian 10

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -34,6 +34,9 @@
     - iotop
     - molly-guard
     - mosh
+    - php
+    - php-pgsql
+    - php-gd
     - python3-software-properties
     - ruby
     - screen
