--- a/roles/blog/tasks/blog.yml
+++ b/roles/blog/tasks/blog.yml
@@ -24,6 +24,16 @@
     owner=root
     group=root
   notify: restart apache
+  when: ansible_distribution_version == '9'
+
+- name: Setup PHP config
+  template:
+    src=etc_php_7.3_apache2_php.ini.j2
+    dest=/etc/php/7.3/apache2/php.ini
+    owner=root
+    group=root
+  notify: restart apache
+  when: ansible_distribution_version == '10'
 
 - name: Add custom postgres user
   postgresql_user:
